<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
            android:title="@string/elm_preferences">

        <ListPreference
                android:key="list_preference_proto"
                android:title="@string/elm_proto"
                android:summary="@string/elm_proto_setup"
                android:entries="@array/elm_proto_preference"
                android:entryValues="@array/elm_proto_preference"
                android:dialogTitle="@string/elm_proto" />
    
        <ListPreference
                android:key="list_preference_bank"
                android:title="@string/elm_bank"
                android:summary="@string/elm_bank_setup"
                android:entries="@array/elm_bank"
                android:entryValues="@array/elm_bank"
                android:dialogTitle="@string/elm_bank" />

        <ListPreference
                android:key="list_preference_port"
                android:title="@string/elm_com_port"
                android:summary="@string/elm_com_port_setup"
                android:entries="@array/elm_com_port"
                android:entryValues="@array/elm_com_port"
                android:dialogTitle="@string/elm_com_port" />


    </PreferenceCategory>

</PreferenceScreen>